--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorPrimaryDark">#8aacb8</color>
     <color name="colorAccent">#CD661D</color>
     <color name="colorAccentDark">#a65200</color>
+    <color name="colorPaleOrange">#ffedcc</color>
 </resources>
