--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="whiteColor">#FFFFFF</color>
     <color name="colorPrimary">#9bc2cf</color>
     <color name="colorPrimaryDark">#8aacb8</color>
     <color name="colorAccent">#CD661D</color>
     <color name="colorAccentDark">#a65200</color>
     <color name="colorPaleOrange">#ffedcc</color>
+    <color name="colorPaleBlue">#e8f4f8</color>
 </resources>
