--- a/app/src/main/res/drawable-xxhdpi/rounded_corner_orange.xml
+++ b/app/src/main/res/drawable-xxhdpi/rounded_corner_orange.xml
@@ -3,18 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:tint="@color/colorAccentDark"
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="@color/colorAccentDark" />
+        android:color="@color/colorAccent" />
 
-    <solid android:color="@color/colorAccent" />
+    <solid android:color="#ffffff" />
 
     <padding
         android:left="1dp"
         android:right="1dp"
         android:top="1dp" />
 
-    <corners android:radius="50dp" />
+    <corners android:radius="10dp" />
 </shape>
