--- a/app/src/main/res/drawable/rounded_corner_blue.xml
+++ b/app/src/main/res/drawable/rounded_corner_blue.xml
@@ -8,7 +8,7 @@
         android:width="1dp"
         android:color="@color/colorPrimaryDark" />
 
-    <solid android:color="#ffffff" />
+    <solid android:color="@color/colorPaleBlue" />
 
     <padding
         android:left="1dp"
