--- a/app/src/main/res/layout/list_view_item_chat_bubbles.xml
+++ b/app/src/main/res/layout/list_view_item_chat_bubbles.xml
@@ -4,16 +4,22 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@drawable/rounded_corner">
+    android:layout_margin="10dp"
+    android:background="@drawable/rounded_corner_orange">
 
     <TextView
         android:id="@+id/tv_chat_sender"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
         android:layout_weight="1"
-        android:padding="5dp"
-        android:layout_margin="10dp"
-        android:paddingStart="10dp"
+        android:paddingBottom="2dp"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
+        android:paddingTop="8dp"
         android:text="TextView"
         android:textAlignment="textStart"
         android:textColor="@color/colorAccentDark"
@@ -23,9 +29,15 @@
         android:id="@+id/tv_chat_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="1dp"
+        android:paddingBottom="8dp"
+        android:paddingEnd="8dp"
+        android:paddingStart="8dp"
+        android:paddingTop="2dp"
         android:layout_weight="1"
-        android:padding="5dp"
-        android:paddingStart="10dp"
         android:text="TextView"
         android:textAlignment="textStart" />
 </LinearLayout>
