--- a/app/src/main/res/layout/list_view_item_groups.xml
+++ b/app/src/main/res/layout/list_view_item_groups.xml
@@ -6,7 +6,6 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -26,6 +25,7 @@
             android:gravity="center|start"
             android:padding="10dp"
             android:textAlignment="textStart"
+            android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -39,22 +39,48 @@
             app:layout_constraintBottom_toBottomOf="@+id/groups_text_view_group_name"
             app:layout_constraintTop_toTopOf="@+id/groups_text_view_group_name"
             tools:text="@string/groups_button_join"
-            app:layout_constraintRight_toLeftOf="@+id/groups_toggle_on_map"
-            android:layout_marginRight="8dp"
+            android:textColor="@android:color/white"
+            app:layout_constraintRight_toLeftOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             app:layout_constraintVertical_bias="1.0" />
 
-        <ToggleButton
-            android:id="@+id/groups_toggle_on_map"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBottom_toBottomOf="@+id/groups_join_button"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/groups_join_button"
-            tools:text="@string/groups_toggle_on_map"
-            app:layout_constraintVertical_bias="0.0" />
-
     </android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:id="@+id/joined_group_options">
+
+        <ImageButton
+            android:id="@+id/button_start_chat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="10dp"
+            android:layout_margin="8dp"
+            android:contentDescription="@string/button_chat_description"
+            android:background="@color/colorAccent"
+            app:srcCompat="@drawable/ic_chat_white_24dp" />
+
+        <ImageButton
+            android:id="@+id/button_see_on_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="10dp"
+            android:layout_margin="8dp"
+            android:contentDescription="@string/button_map_description"
+            android:background="@color/colorAccent"
+            app:srcCompat="@drawable/ic_location_on_white_24dp" />
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/members_names"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:text="@string/group_members" />
+
 </LinearLayout>
