--- a/app/src/main/res/layout/list_view_item_groups.xml
+++ b/app/src/main/res/layout/list_view_item_groups.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:padding="16dp"
     android:orientation="vertical">
 
     <android.support.constraint.ConstraintLayout
@@ -17,15 +18,13 @@
         <TextView
             android:id="@+id/groups_text_view_group_name"
             android:layout_width="0dp"
-            android:layout_height="47dp"
-            android:layout_marginEnd="8dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
             android:gravity="center|start"
             android:padding="10dp"
             android:textAlignment="textStart"
-            android:textSize="20dp"
+            android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintLeft_toLeftOf="parent"
