--- a/app/src/main/res/layout/list_view_item_chat_bubbles.xml
+++ b/app/src/main/res/layout/list_view_item_chat_bubbles.xml
@@ -20,7 +20,7 @@
         android:paddingEnd="8dp"
         android:paddingStart="8dp"
         android:paddingTop="8dp"
-        android:text="TextView"
+        android:text=""
         android:textAlignment="textStart"
         android:textColor="@color/colorAccentDark"
         android:textStyle="bold" />
@@ -38,6 +38,6 @@
         android:paddingStart="8dp"
         android:paddingTop="2dp"
         android:layout_weight="1"
-        android:text="TextView"
+        android:text=""
         android:textAlignment="textStart" />
 </LinearLayout>
