--- a/app/src/main/res/layout/list_view_item_chat_image_bubble.xml
+++ b/app/src/main/res/layout/list_view_item_chat_image_bubble.xml
@@ -20,7 +20,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
-        android:text="TextView"
+        android:text=""
         android:textAlignment="textStart"
         android:textColor="@color/colorAccentDark"
         android:textStyle="bold" />
@@ -30,6 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
+        android:contentDescription="@string/chat_image_description"
         android:padding="8dp"/>
 
     <TextView
@@ -45,6 +46,6 @@
         android:paddingEnd="8dp"
         android:paddingStart="8dp"
         android:paddingTop="2dp"
-        android:text="TextView"
+        android:text=""
         android:textAlignment="textStart" />
 </LinearLayout>
